<resources>
    <string name="app_name">Names</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="remainder">Осталось ввести %1$d имен</string>
    <string name="enter">Enter</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_percent">%</string>
    <string name="_division">/</string>
    <string name="_multi">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_plus">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_a_c">a/c</string>
</resources>