<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/_16dp"
    tools:context=".ui.fragments.calculator.CalculatorFragment">

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_9" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equals"
        app:layout_constraintStart_toEndOf="@id/btn_8" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_7" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_plus"
        app:layout_constraintBottom_toTopOf="@id/btn_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_6" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_5" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_minus"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_3" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_2" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        android:layout_height="wrap_content"
        android:text="@string/_multi"/>

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn_multi"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        android:layout_height="wrap_content"
        android:text="@string/_division"/>

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn_division"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        android:layout_height="wrap_content"
        android:text="@string/_percent"/>

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintStart_toStartOf="@id/btn_0"
        android:layout_height="wrap_content"
        android:text="@string/_a_c"/>

    <TextView
        android:id="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_multi"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/_0"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>